--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ colorama==0.4.6
 contourpy==1.2.1
 cryptography==42.0.8
 cycler==0.12.1
-Django==5.0.6
+Django>=4.2,<5.0
 django-anymail==11.0
 django-oauth-toolkit==2.4.0
 Flask==3.0.3
